testdata/invalid/import/cycle_b.pact
// Cyclic import - B imports A
import "./cycle_a.pact"

component ServiceB {
	id: string
}
